Guides and about ish done

--- a/brewmapp/brewmapp/templates/guides.html
+++ b/brewmapp/brewmapp/templates/guides.html
@@ -4,14 +4,18 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/guideStyle.css">
 </head>
 <body>
+
 	<nav id="mainNav">
-		<div><img src="../static/images/logo.png" id="keg"></div>
+		<div><img src="../static/images/logoFinal2.png" id="keg"></div>
 		<ul>
-			<li>
-				<a href="#">Home</a>
+			<li class="menuElement">
+				<a href="index.html">HOME</a>
 			</li>
-			<li id="about">
-				<a href="#">About</a>
+			<li class="menuElement" id="guides">
+				<a href="guides.html">GUIDES</a>
+			</li>
+			<li class="menuElement" id="about">
+				<a href="about.html">ABOUT</a>
 			</li>
 		</ul>
 	</nav>
@@ -19,58 +23,62 @@
 
 	<main>
 		<div id="mainDiv">
-			<div class="guides"  id= "guide1">
-
-				<div >
-					<img class="guideImg" src="../static/images/logo.png">
-				</div>
-				<div class="guideTxt"><p>1</p></div>
-
-			</div>
 
 
+		<div class="guides"  id= "guide1">
 
-			<div class="guides" id= "guide2">
-
-				<div >
-					<img class="guideImg" src="../static/images/logo.png">
-				</div>
-				<div class="guideTxt"><p>2</p></div>
-
-			</div>
+			<div class="guideTitle"><p>Disgusting looking shit!</p></div>
+			<div class="guideText">guide 1 info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			<img class="guideImg" src="../static/images/home_brew.jpg">
+					
+		</div>
 
 
+		<div class="guides"  id= "guide2">
 
-			<div class="guides" id= "guide3">
-
-				<div >
-					<img class="guideImg" src="../static/images/logo.png">
-				</div>
-				<div class="guideTxt"><p>3</p></div>
-
-			</div>
+			<div class="guideTitle"><p>Title</p></div>
+			<div class="guideText">guide 2info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			<img class="guideImg" src="../static/images/beer1.jpg">
+					
+		</div>
 
 
+		<div class="guides"  id= "guide3">
 
-			<div class="guides" id= "guide4">
-
-				<div>
-					<img class="guideImg" src="../static/images/logo.png">
-				</div>
-				<div class="guideTxt"><p>4</p></div>
-
-			</div>
+			<div class="guideTitle"><p>Title</p></div>
+			<div class="guideText">guide 3info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			<img class="guideImg" src="../static/images/home_brew2.jpg">
+					
+		</div>
 
 
+		<div class="guides"  id= "guide4">
 
-			<div class ="guides" id= "guide5">
+			<div class="guideTitle"><p>Title</p></div>
+			<div class="guideText">guide 4info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			<img class="guideImg" src="../static/images/beer2.jpg">
+					
+		</div>
 
-				<div >
-					<img class="guideImg"  src="../static/images/logo.png">
-				</div>
-				<div class="guideTxt"><p>5</p></div>
 
-			</div>
+		<div class="guides"  id= "guide5">
+
+			<div class="guideTitle"><p>Title</p></div>
+			<div class="guideText">guide 5info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			<img class="guideImg" src="../static/images/home_brew3.jpg">
+					
+		</div>
+
+
+		<div class="guides"  id= "guide6">
+
+			<div class="guideTitle"><p>Title</p></div>
+			<div class="guideText" >guide 6info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			<img class ="guideImg" src="../static/images/home_brew4.jpg">
+		
+		</div>
+				
+
 		</div>
 	</main>
 </body>
