--- a/brewmapp/brewmapp/static/css/guideStyle.css
+++ b/brewmapp/brewmapp/static/css/guideStyle.css
@@ -1,10 +1,11 @@
 html{
-	background: gray fixed no-repeat;
+	background: url("../images/barrel1.jpg") fixed no-repeat;
 	background-size: cover;
 	max-width: 100%;
 	max-height: 100%;
 	min-width: 100%;
 	min-height: 100%;
+
 	
 }
 
@@ -14,27 +15,54 @@ html, body{
 }
 
 #mainNav{
-	border: 1px solid ;
-	background-color: silver;
+	background: lightblue;
 	width: 100%;
 	height: 50px;
 	top:0px;
 	position: fixed;
+	padding: 0;
 	z-index: 99999;
+	padding-left: 20.5em;
+	border: 1px solid black;
 }
 
-li{
-	display: inline-block;
-	margin: 0px;
+ul {
+	height: 100%;
+	margin: 0;
+	padding: 0;
 	margin-left: 5em;
 
 }
 
-a{
+.menuElement{
+	display: inline-block;
+	margin-top: 0px;
+	
+	width: 6%;
+	text-align: center;
+	height: 50px;
+	line-height: 50px;
+
 	font-size: 25px;
-	border: 1px solid black;
+	font-family: "arial black";
+	color: black;
+	margin-left: 0.5em;
+
+}
+a:link{
+	color: black;
+}
+a:visited{
+	color: black;
+}
+.menuElement:hover{
+	background-color: #de8301;
+}
+
+a{
+
 	text-decoration: none;
-	color: blue;
+
 }
 
 a:hover{
@@ -44,35 +72,61 @@ a:hover{
 #keg{
 	display: inline-block;
 	float: left;
-	vertical-align: bottom;
-	width: 3.5em;
-	height: 2.5em;
-	padding: auto;
-	margin: 0.3em;
-	margin-right: 1em;
+	width: 3em;
+	height: 3em;
+	margin: 0;
 }
 
 main{
 	padding-top: 3em;
-	height: 100%;
-	width: 60em;
+	height: auto;
+	width: 80em;
 	margin: auto;
-
+	padding: auto;
+	min-width: 30%;
+	max-width: 100%;
+	overflow: auto;
 }
 
 #mainDiv{
-	background: silver;
-	width: 80%;
+	background: lightblue;
+	width: 95%;
 	margin: 1em;
 	padding: 1em;
 	
 }
 
 .guides{
-	border: 1px solid red;
+	border: 1px solid lightblue;
+	width: 100%;
+	height: auto;
+	overflow:auto;
+	background: lightgray;
 }
+.guideTitle{
+	float: right;
+	margin-left: 20%;
+	margin-right: 30%;
+	font-size: 24px;
+	font-weight: bold;
+	font-family: "arial";
+	text-align: center;
+}
+.guideText{
+	float: right;
+	margin-left: 30%;
+	margin-right: 10%;
+	font-family: "arial";
+}
+
 .guideImg{
-	border: 1px solid green;
-	width: 5em;
-	height: 5em;
+	width: 15%;
+	height: 25%;
+	position: absolute;
+	min-width: 10%;
+	max-width: 15%;
+	min-height: 10%;
+	max-height: 25%;
+		
+
 }
