Fixed index and made about

--- a/brewmapp/brewmapp/static/css/guideStyle.css
+++ b/brewmapp/brewmapp/static/css/guideStyle.css
@@ -120,13 +120,9 @@ main{
 }
 
 .guideImg{
-	width: 15%;
-	height: 25%;
+	height: auto;
 	position: absolute;
-	min-width: 10%;
-	max-width: 15%;
-	min-height: 10%;
-	max-height: 25%;
-		
+	max-width: 10%;
+	min-width: 1%;
 
 }
