--- a/brewmapp/brewmapp/templates/guides.html
+++ b/brewmapp/brewmapp/templates/guides.html
@@ -24,16 +24,16 @@
 	<main>
 		<div id="mainDiv">
 
-
+		<a href="">
 		<div class="guides"  id= "guide1">
 
 			<div class="guideTitle"><p>Disgusting looking shit!</p></div>
 			<div class="guideText">guide 1 info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
 			<img class="guideImg" src="../static/images/home_brew.jpg">
 					
-		</div>
+		</div></a>
 
-
+		<a href="">
 		<div class="guides"  id= "guide2">
 
 			<div class="guideTitle"><p>Title</p></div>
@@ -41,42 +41,43 @@
 			<img class="guideImg" src="../static/images/beer1.jpg">
 					
 		</div>
+		</a>
 
-
+		<a href="">
 		<div class="guides"  id= "guide3">
 
 			<div class="guideTitle"><p>Title</p></div>
 			<div class="guideText">guide 3info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
 			<img class="guideImg" src="../static/images/home_brew2.jpg">
 					
-		</div>
+		</div></a>
 
-
+		<a href="">
 		<div class="guides"  id= "guide4">
 
 			<div class="guideTitle"><p>Title</p></div>
 			<div class="guideText">guide 4info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
 			<img class="guideImg" src="../static/images/beer2.jpg">
 					
-		</div>
+		</div></a>
 
-
+		<a href="">
 		<div class="guides"  id= "guide5">
 
 			<div class="guideTitle"><p>Title</p></div>
 			<div class="guideText">guide 5info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
 			<img class="guideImg" src="../static/images/home_brew3.jpg">
 					
-		</div>
+		</div></a>
 
-
+		<a href="">
 		<div class="guides"  id= "guide6">
 
 			<div class="guideTitle"><p>Title</p></div>
 			<div class="guideText" >guide 6info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
 			<img class ="guideImg" src="../static/images/home_brew4.jpg">
 		
-		</div>
+		</div></a>
 				
 
 		</div>
