--- a/brewmapp/brewmapp/static/css/aboutStyle.css
+++ b/brewmapp/brewmapp/static/css/aboutStyle.css
@@ -1,10 +1,12 @@
 html{
-	background: url("../images/barell.jpg") fixed no-repeat;
+	background: url("../images/barrel1.jpg") fixed no-repeat;
 	background-size: cover;
 	max-width: 100%;
 	max-height: 100%;
 	min-width: 100%;
 	min-height: 100%;
+
+	
 }
 
 html, body{
@@ -16,7 +18,7 @@ html, body{
 	background: lightblue;
 	width: 100%;
 	height: 50px;
-	top: 0px;
+	top:0px;
 	position: fixed;
 	padding: 0;
 	z-index: 99999;
@@ -29,34 +31,38 @@ ul {
 	margin: 0;
 	padding: 0;
 	margin-left: 5em;
+
 }
 
 .menuElement{
 	display: inline-block;
 	margin-top: 0px;
+	
 	width: 6%;
 	text-align: center;
 	height: 50px;
 	line-height: 50px;
+
 	font-size: 25px;
 	font-family: "arial black";
 	color: black;
-}
+	margin-left: 0.5em;
 
+}
 a:link{
-	color:black;
+	color: black;
 }
-
 a:visited{
 	color: black;
 }
-
 .menuElement:hover{
 	background-color: #de8301;
 }
 
 a{
+
 	text-decoration: none;
+
 }
 
 a:hover{
@@ -70,3 +76,34 @@ a:hover{
 	height: 3em;
 	margin: 0;
 }
+
+main{
+	padding-top: 3em;
+	height: auto;
+	width: 80em;
+	margin: auto;
+	padding: auto;
+	min-width: 30%;
+	max-width: 100%;
+	overflow: auto;
+}
+
+#mainDiv{
+	background: lightblue;
+	width: 95%;
+	margin: 1em;
+	padding: 1em;
+	
+}
+#github{
+	width: 40%;
+}
+#contributors{
+	width: 40%;
+
+}
+#octocat{
+	width: 10em;
+	height: 9em;
+}
+
