--- a/brewmapp/brewmapp/static/css/style.css
+++ b/brewmapp/brewmapp/static/css/style.css
@@ -1,31 +1,72 @@
-html, body{
-	margin: 0px;
-	padding: 0px;
+html{
+	background-size: cover;
+	max-width: 100%;
+	max-height: 100%;
+	min-width: 100%;
+	min-height: 100%;
+
+	
 }
 
-body{
-	margin-bottom: auto;
-	margin-top: 50px;
+html, body{
+	margin: 0;
+	padding: 0;
 }
 
 #mainNav{
-	border: 1px solid ;
-	background-color: silver;
+	background: lightblue;
 	width: 100%;
 	height: 50px;
 	top:0px;
 	position: fixed;
+	padding: 0;
 	z-index: 99999;
+	padding-left: 20.5em;
+	border: 1px solid black;
 }
 
-li{
+ul {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	margin-left: 5em;
+
+}
+
+.menuElement{
 	display: inline-block;
-	margin: 0px;
-}
+	margin-top: 0px;
+	
+	width: 6%;
+	text-align: center;
+	height: 50px;
+	line-height: 50px;
 
+	font-size: 25px;
+	font-family: "arial black";
+	color: black;
+	margin-left: 0.5em;
+
+}
+a:link{
+	color: black;
+}
+a:visited{
+	color: black;
+}
+#home:hover{
+	background-color: #de8301;
+}
+#guides:hover{
+	background-color: #de8301;
+}
+#about:hover{
+	background-color: #de8301;
+}
 a{
+
 	text-decoration: none;
-	color: blue;
+
 }
 
 a:hover{
@@ -35,26 +76,21 @@ a:hover{
 #keg{
 	display: inline-block;
 	float: left;
-	vertical-align: bottom;
-	width: 2.5em;
-	height: 2.5em;
-	padding: auto;
-	margin: 0.3em;
-	margin-right: 1em;
+	width: 3em;
+	height: 3em;
+	margin: 0;
 }
-
-
-#about{
-	padding-right: 5px;
-	float:right;
-}
-
 #searchField{
 	width: 15em;
 	height: auto;
+
+}
+#seachField:hover{
+	opacity: 0;
 }
 
 #subbutton{
+	margin-left: 6em;
 	border-radius: 0px;
 	border: 1px solid black;
 }
