--- a/brewmapp/brewmapp/templates/about.html
+++ b/brewmapp/brewmapp/templates/about.html
@@ -1,29 +1,48 @@
 <html>
 <head>
 	<title>About</title>
-	<link rel="stylesheed" type="text/css" href="../static/css/aboutStyle.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/aboutStyle.css">
 </head>
 <body>
+
 	<nav id="mainNav">
-	<div><img src="../static/images/logoFinal2.png" id="keg"></div>
-	<ul>
-		<li class="menuElement">
-			<a href="index.html">HOME</a>
-		</li>
-		<li class="menuElement">
-			<a href="guides.html">GUIDES</a>
-		</li>
-		<li class="menuElement">
-			<a href="about.html">ABOUT</a>
-		</li>
-	</ul>
+		<div><img src="../static/images/logoFinal2.png" id="keg"></div>
+		<ul>
+			<li class="menuElement">
+				<a href="index.html">HOME</a>
+			</li>
+			<li class="menuElement" id="guides">
+				<a href="guides.html">GUIDES</a>
+			</li>
+			<li class="menuElement" id="about">
+				<a href="about.html">ABOUT</a>
+			</li>
+		</ul>
 	</nav>
 
+
 	<main>
-		
+		<div id="mainDiv">
+				<div id="info">
+					<p>info about the page</p>
+				</div>
 
+				<div id="github">
+					<img id="octocat" src="../static/images/Octocat.png">
+					<p>github.com/svimanet/info-212/</p>
+				</div>
 
+				<div id="contributors">
+					<p>Contributors:</p>
+					<ul>
+						<li><p>Eirik Sjøvoll</p></li>
+						<li><p>Morten Linderud</p></li>
+						<li><p>Marius Lillevik</p></li>
+						<li><p>Roar Helland</p></li>
+					</ul>
+				</div>
+
+		</div>
 	</main>
-
 </body>
 </html>
