--- a/brewmapp/brewmapp/templates/about.html
+++ b/brewmapp/brewmapp/templates/about.html
@@ -24,14 +24,16 @@
 	<main>
 		<div id="mainDiv">
 				<div id="info">
-					<p>info about the page</p>
+					<p>This website was created as a project in
+				        the INFO 212 "Systemdevelopment" course at
+					The University of Bergen. <br><br> Since all 						the creators of the project love beer, 
+					it was decided that we would make something						related to beer and microbreweries.<br>	</p>
 				</div>
 
 				<div id="github">
-					<img id="octocat" src="../static/images/Octocat.png">
-					<p>github.com/svimanet/info-212/</p>
-				</div>
-
+					<p>The project will be open source once the 						deadline has passed at the endo of the 							current semester.</p>
+				<img id="octocat" src="../static/images/Octocat.png">
+				</div>	
 				<div id="contributors">
 					<p>Contributors:</p>
 					<ul>
