--- a/brewmapp/brewmapp/templates/guides.html
+++ b/brewmapp/brewmapp/templates/guides.html
@@ -9,13 +9,13 @@
 		<div><img src="../static/images/logoFinal2.png" id="keg"></div>
 		<ul>
 			<li class="menuElement">
-				<a href="index.html">HOME</a>
+				<a class="amenu" href="index.html">HOME</a>
 			</li>
 			<li class="menuElement" id="guides">
-				<a href="guides.html">GUIDES</a>
+				<a class="amenu" href="guides.html">GUIDES</a>
 			</li>
 			<li class="menuElement" id="about">
-				<a href="about.html">ABOUT</a>
+				<a class="amenu" href="about.html">ABOUT</a>
 			</li>
 		</ul>
 	</nav>
@@ -26,59 +26,50 @@
 
 		<a href="">
 		<div class="guides"  id= "guide1">
-
-			<div class="guideTitle"><p>Disgusting looking shit!</p></div>
-			<div class="guideText">guide 1 info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			
 			<img class="guideImg" src="../static/images/home_brew.jpg">
-					
+			<div class="guideTitle"><p>Awesome Amber!</p></div>
+			<div class="guideText">
+
+			<p>Type: Extract<br>
+			Batch: 5.00 gal<br>
+			Boil Size: 3.98 gal<br>
+			Boil Time: 45 min<br>
+			Rating: 45 / 50<br></p>
+			</div>
+
 		</div></a>
 
 		<a href="">
 		<div class="guides"  id= "guide2">
-
-			<div class="guideTitle"><p>Title</p></div>
-			<div class="guideText">guide 2info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
+			
 			<img class="guideImg" src="../static/images/beer1.jpg">
-					
+			<div class="guideTitle"><p>Max's last call</p></div>
+			<div class=guideText>
+			<p>Type: All Grain<br>
+			Batch Size: 5.50 gal<br>
+			Boil Size: 7.00 gal<br>
+			Boil Time: 60 min<br>
+			Rating: 35 / 50</p>
+			</div>
+
 		</div>
 		</a>
 
 		<a href="">
 		<div class="guides"  id= "guide3">
 
-			<div class="guideTitle"><p>Title</p></div>
-			<div class="guideText">guide 3info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
 			<img class="guideImg" src="../static/images/home_brew2.jpg">
-					
+			<div class="guideTitle"><p>No Decency Amber</p></div>
+			<div class="guideText">
+
+			<p>Type: Partial Mash<br>
+			Batch Size: 5.50 gal<br>
+			Boil Size: 6.85 gal<br>
+			Boil Time: 60 min<br>
+			Rating: 30 / 50</p>
+			</div>
 		</div></a>
-
-		<a href="">
-		<div class="guides"  id= "guide4">
-
-			<div class="guideTitle"><p>Title</p></div>
-			<div class="guideText">guide 4info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
-			<img class="guideImg" src="../static/images/beer2.jpg">
-					
-		</div></a>
-
-		<a href="">
-		<div class="guides"  id= "guide5">
-
-			<div class="guideTitle"><p>Title</p></div>
-			<div class="guideText">guide 5info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
-			<img class="guideImg" src="../static/images/home_brew3.jpg">
-					
-		</div></a>
-
-		<a href="">
-		<div class="guides"  id= "guide6">
-
-			<div class="guideTitle"><p>Title</p></div>
-			<div class="guideText" >guide 6info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info info </div>
-			<img class ="guideImg" src="../static/images/home_brew4.jpg">
-		
-		</div></a>
-				
 
 		</div>
 	</main>
