--- a/brewmapp/brewmapp/static/css/style.css
+++ b/brewmapp/brewmapp/static/css/style.css
@@ -42,7 +42,7 @@ ul {
 	height: 50px;
 	line-height: 50px;
 
-	font-size: 25px;
+	font-size: 1em;
 	font-family: "arial black";
 	color: black;
 	margin-left: 0.5em;
@@ -64,7 +64,10 @@ a:visited{
 	background-color: #de8301;
 }
 a{
-
+	margin:0px;
+	display: block;
+	width: 100%;
+	height: 100%;
 	text-decoration: none;
 
 }
@@ -81,16 +84,15 @@ a:hover{
 	margin: 0;
 }
 #searchField{
-	width: 15em;
+	width: 150%;
 	height: auto;
-
 }
 #seachField:hover{
 	opacity: 0;
 }
 
 #subbutton{
-	margin-left: 6em;
+	margin-left:0;
 	border-radius: 0px;
 	border: 1px solid black;
 }
