fixed for flask

--- a/brewmapp/brewmapp/templates/index.html
+++ b/brewmapp/brewmapp/templates/index.html
@@ -9,13 +9,13 @@
 			<div><img src="../static/images/logoFinal2.png" id="keg"></div>
 			<ul>
 				<li class="menuElement" id="home">
-					<a href="index.html">HOME</a>
+					<a href="/index">HOME</a>
 				</li>
 				<li class="menuElement" id="guides">
-					<a href="guides.html">GUIDES</a>
+					<a href="/guides">GUIDES</a>
 				</li>
 				<li class="menuElement" id="about">
-					<a href="about.html">ABOUT</a>
+					<a href="/about">ABOUT</a>
 				</li>
 				<li class="menuElement">
 					<input type="text" id="searchField" value="Search here.">
