--- a/brewmapp/brewmapp/templates/guides.html
+++ b/brewmapp/brewmapp/templates/guides.html
@@ -9,13 +9,13 @@
 		<div><img src="../static/images/logoFinal2.png" id="keg"></div>
 		<ul>
 			<li class="menuElement">
-				<a class="amenu" href="index.html">HOME</a>
+				<a class="amenu" href="/index">HOME</a>
 			</li>
 			<li class="menuElement" id="guides">
-				<a class="amenu" href="guides.html">GUIDES</a>
+				<a class="amenu" href="/guides">GUIDES</a>
 			</li>
 			<li class="menuElement" id="about">
-				<a class="amenu" href="about.html">ABOUT</a>
+				<a class="amenu" href="/about">ABOUT</a>
 			</li>
 		</ul>
 	</nav>
