--- a/brewmapp/brewmapp/templates/about.html
+++ b/brewmapp/brewmapp/templates/about.html
@@ -9,7 +9,7 @@
 		<div><img src="../static/images/logoFinal2.png" id="keg"></div>
 		<ul>
 			<li class="menuElement">
-				<a href="/index">HOME</a>
+				<a href="/">HOME</a>
 			</li>
 			<li class="menuElement" id="guides">
 				<a href="/guides">GUIDES</a>
