--- a/brewmapp/brewmapp/static/css/style.css
+++ b/brewmapp/brewmapp/static/css/style.css
@@ -4,8 +4,6 @@ html{
 	max-height: 100%;
 	min-width: 100%;
 	min-height: 100%;
-
-	
 }
 
 html, body{
@@ -20,8 +18,7 @@ html, body{
 	top:0px;
 	position: fixed;
 	padding: 0;
-	z-index: 99999;
-	padding-left: 20.5em;
+	z-index: 9998;
 	border: 1px solid black;
 }
 
@@ -30,23 +27,23 @@ ul {
 	margin: 0;
 	padding: 0;
 	margin-left: 5em;
+}
 
+li{
+	margin: 0px;
 }
 
 .menuElement{
 	display: inline-block;
 	margin-top: 0px;
-	
-	width: 6%;
 	text-align: center;
 	height: 50px;
 	line-height: 50px;
-
 	font-size: 1em;
-	font-family: "arial black";
+	font-family: "arial black", serif;
 	color: black;
-	margin-left: 0.5em;
-
+	padding-left: 0.5em;
+	padding-right: 0.5em;
 }
 a:link{
 	color: black;
@@ -84,7 +81,7 @@ a:hover{
 	margin: 0;
 }
 #searchField{
-	width: 150%;
+	width: 100%;
 	height: auto;
 }
 #seachField:hover{
@@ -95,4 +92,20 @@ a:hover{
 	margin-left:0;
 	border-radius: 0px;
 	border: 1px solid black;
+	height: auto;
+}
+
+body .ui-autocomplete {
+  z-index: 9999;
+  height: auto;
+	max-height:200px;
+	overflow: auto;
+}
+body .ui-autocomplete .ui-menu-item .ui-corner-all {
+  height:auto;
+  width: auto;
+}
+body .ui-autocomplete .ui-menu-item .ui-state-focus {
+  height: auto;
+  border: 0px;
 }
