--- a/brewmapp/brewmapp/templates/index.html
+++ b/brewmapp/brewmapp/templates/index.html
@@ -2,6 +2,10 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 		<script type="text/javascript" src="../static/javascript/script.js"></script>
+		<link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"/>
+		<script src="../static/javascript/jquery.js"></script>
+		<script src="../static/javascript/jquery-ui.js"></script>
+		<script rel="script" src="../static/javascript/autocomplete.js"></script>
 	</head>
 	<body>
 
@@ -9,7 +13,7 @@
 			<div><img src="../static/images/logoFinal2.png" id="keg"></div>
 			<ul>
 				<li class="menuElement" id="home">
-					<a href="/index">HOME</a>
+					<a href="/">HOME</a>
 				</li>
 				<li class="menuElement" id="guides">
 					<a href="/guides">GUIDES</a>
@@ -18,7 +22,7 @@
 					<a href="/about">ABOUT</a>
 				</li>
 				<li class="menuElement">
-					<input type="text" id="searchField" value="Search here.">
+					<input value="searchHere" type="text" id="searchField" class="form-control input-lg"/>
 				</li>
 				<li class="menuElement">
 					<input type="button" value="Search" onclick="search()" id="subbutton">
@@ -27,7 +31,7 @@
 		</nav>
 
 		
-		<div id="map" style="width:100%;height:100%;">
+		<div id="map" style="width:100%;height:calc(100% - 50px); margin-top:50px;">
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN0vhX2FQSENp9161rhLuoXUDCo-PmXiQ&libraries=places&callback=myMap"></script>
 
 		</div>
