Added all coords and placed them on the map
I've now got all the coords from google's geocoder api and stored them in the database. Made the api return the coords for all breweries and places them on the map on the client side using javascript.

--- a/brewmapp/brewmapp/templates/index.html
+++ b/brewmapp/brewmapp/templates/index.html
@@ -25,14 +25,14 @@
 					<input value="searchHere" type="text" id="searchField" class="form-control input-lg"/>
 				</li>
 				<li class="menuElement">
-					<input type="button" value="Search" onclick="search()" id="subbutton">
+					<input type="button" value="Search" onclick="markAllBreweries()" id="subbutton">
 				</li>
 			</ul>
 		</nav>
 
 		
 		<div id="map" style="width:100%;height:calc(100% - 50px); margin-top:50px;">
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN0vhX2FQSENp9161rhLuoXUDCo-PmXiQ&libraries=places&callback=myMap"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN0vhX2FQSENp9161rhLuoXUDCo-PmXiQ&libraries=places&callback=markAllBreweries"></script>
 
 		</div>
 	</body>
