Fixed all the review comments and made the map interactive
Users can now click on markers and be directed to the location of the marker. The markers will zoom in on click and display information in a box above the marker.

--- a/brewmapp/brewmapp/static/css/style.css
+++ b/brewmapp/brewmapp/static/css/style.css
@@ -109,3 +109,11 @@ body .ui-autocomplete .ui-menu-item .ui-state-focus {
   height: auto;
   border: 0px;
 }
+
+.mapmarker{
+    margin:1px;
+}
+
+#subbutton{
+       cursor: pointer;
+}
