--- a/brewmapp/brewmapp/templates/index.html
+++ b/brewmapp/brewmapp/templates/index.html
@@ -25,7 +25,7 @@
 					<input value="searchHere" type="text" id="searchField" class="form-control input-lg"/>
 				</li>
 				<li class="menuElement">
-					<input type="button" value="Search" onclick="markAllBreweries()" id="subbutton">
+					<input type="button" value="Search" onclick="searchAddressFromInput()" id="subbutton">
 				</li>
 			</ul>
 		</nav>
