Added device-width tags to all html files

--- a/brewmapp/brewmapp/templates/index.html
+++ b/brewmapp/brewmapp/templates/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<title>Brewmapp</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 		<script type="text/javascript" src="../static/javascript/script.js"></script>
 		<link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"/>
