--- a/brewmapp/brewmapp/templates/guides.html
+++ b/brewmapp/brewmapp/templates/guides.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Guides</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../static/css/guideStyle.css">
 </head>
 <body>
