Removed zoom on click

--- a/brewmapp/brewmapp/templates/index.html
+++ b/brewmapp/brewmapp/templates/index.html
@@ -24,7 +24,7 @@
 					<a href="/about">ABOUT</a>
 				</li>
 				<li class="menuElement">
-					<input value="searchHere" type="text" id="searchField" class="form-control input-lg"/>
+					<input value="Search Here" type="text" id="searchField" onclick="removeDefaultValue()" class="form-control input-lg"/>
 				</li>
 				<li class="menuElement">
 					<input type="button" value="Search" onclick="searchAddressFromInput()" id="subbutton">
